Implementazione impostazioni giornale eventi. issue #45
